opam-version: "2.0"
version: "0.42"
authors: "Alain Frisch"
maintainer: "David Allsopp <david@tarides.com>"
bug-reports: "https://github.com/ocaml/flexdll/issues"
dev-repo: "git+https://github.com/ocaml/flexdll.git"
homepage: "https://github.com/ocaml/flexdll#readme"
license: "Zlib"
synopsis: "FlexDLL Linker"
description: "Used after compiling OCaml with the precompiled binary release
of FlexDLL to rebuild and install flexlink.exe using the new OCaml compiler."
build-env: PATH += "%{lib}%/%{flexdll-bin:installed?flexdll-bin:ocaml}%"
build: [
  [make "MSVC_DETECT=0" "support" "flexlink.exe"
        "CHAINS=mingw" {ocaml-option-32bit:installed & ocaml-option-mingw:installed}
        "CHAINS=mingw64" {!ocaml-option-32bit:installed & ocaml-option-mingw:installed}
        "CHAINS=msvc" {ocaml-option-32bit:installed & ocaml-option-msvc:installed}
        "CHAINS=msvc64" {!ocaml-option-32bit:installed & ocaml-option-msvc:installed}
        "CHAINS=cygwin" {ocaml-option-32bit:installed & !ocaml-option-mingw:installed & !ocaml-option-msvc:installed}
        "CHAINS=cygwin64" {!ocaml-option-32bit:installed & !ocaml-option-mingw:installed & !ocaml-option-msvc:installed}]
]
depends: [
  "ocaml"
  "flexdll-bin" {= _:version}
]
depopts: [
  "ocaml-option-32bit"
  "ocaml-option-mingw"
  "ocaml-option-msvc"
]
available: (opam-version >= "2.2" & os = "win32") | os = "cygwin"
